test/lit/pto/trsqrt_high_precision_requires_tmp.pto
// RUN: not ptoas --pto-arch=a5 %s 2>&1 | FileCheck %s

module {
  func.func @trsqrt_high_precision_requires_tmp() {
    %src = pto.alloc_tile : !pto.tile_buf<loc=vec, dtype=f32, rows=1, cols=16, v_row=1, v_col=16, blayout=row_major, slayout=none_box, fractal=512, pad=0>
    %dst = pto.alloc_tile : !pto.tile_buf<loc=vec, dtype=f32, rows=1, cols=16, v_row=1, v_col=16, blayout=row_major, slayout=none_box, fractal=512, pad=0>

    pto.trsqrt ins(%src : !pto.tile_buf<loc=vec, dtype=f32, rows=1, cols=16, v_row=1, v_col=16, blayout=row_major, slayout=none_box, fractal=512, pad=0>)
               outs(%dst : !pto.tile_buf<loc=vec, dtype=f32, rows=1, cols=16, v_row=1, v_col=16, blayout=row_major, slayout=none_box, fractal=512, pad=0>)
               {precisionType = #pto<rsqrt_precision high_precision>}
    return
  }
}

// CHECK: error: 'pto.trsqrt' op expects tmp when precisionType is high_precision
